--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "anhskohbo/no-captcha": "^2.3",
         "cviebrock/eloquent-sluggable": "^4.2",
         "filp/whoops": "^2.1",
         "intervention/image": "^2.3",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.2.0",
+        "laravelcollective/html": "^5.4",
         "milon/barcode": "^5.3",
         "spatie/laravel-feed": "^1.4"
     },
