--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "algolia/algoliasearch-laravel": "^1.7",
         "anhskohbo/no-captcha": "^2.3",
         "cviebrock/eloquent-sluggable": "^4.2",
         "filp/whoops": "^2.1",
         "intervention/image": "^2.3",
         "laravel/framework": "5.4.*",
+        "laravel/scout": "^3.0",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4",
         "milon/barcode": "^5.3",
