--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/scout": "^3.0",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4",
+        "mews/purifier": "^2.0",
         "milon/barcode": "^5.3",
         "nexmo/laravel": "^0.4.0",
         "spatie/laravel-feed": "^1.4"
